Added func operations

--- a/main.ipynb
+++ b/main.ipynb
@@ -274,6 +274,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_measuremenet_data(X_train: np.array) -> (np.array, np.array):\n",
+    "    num_pts = np.shape(X_train)[1]\n",
+    "    start = -10\n",
+    "    end = 10\n",
+    "    step = (end - start)/num_pts\n",
+    "    eval_points = np.arange(start, end, step) + np.random.uniform(-step/2, step/2, size=num_pts)\n",
+    "    return np.tile(eval_points, (np.shape(X_train)[0], 1)), X_train # X_train is the new \"y\", eval_pts are X (maybe assume 0 noise?)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -322,7 +337,8 @@
     "a = func(\"3+2\")\n",
     "b = func(\"x^4\")\n",
     "add = a + b\n",
-    "add.print_tree(add.root)"
+    "add.print_tree(add.root)\n",
+    "\n"
    ]
   }
  ],
