--- a/rl.ipynb
+++ b/rl.ipynb
@@ -9,40 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "add:\n",
-      "(3+3*x)+(sin(x)+2)\n",
-      "           (3+3*x)+(sin(x)+2)           \n",
-      "       3+3*x              sin(x)+2      \n",
-      "    3        3*x      sin(x)      2     \n",
-      "            3    x   sin   x            \n",
-      "\n",
-      "\n",
-      "\n",
-      "sub:\n",
-      "(3+3*x)-(sin(x)+2)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'NoneType' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/clemenschristoph/GitHub/BFE/rl.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/clemenschristoph/GitHub/BFE/rl.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpackages\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfunc\u001b[39;00m \u001b[39mimport\u001b[39;00m func\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/clemenschristoph/GitHub/BFE/rl.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/clemenschristoph/GitHub/BFE/rl.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrandom\u001b[39;00m\n",
-      "File \u001b[0;32m~/GitHub/BFE/packages/func.py:609\u001b[0m\n\u001b[1;32m    607\u001b[0m sub \u001b[39m=\u001b[39m f \u001b[39m-\u001b[39m g\n\u001b[1;32m    608\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39msub:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 609\u001b[0m sub\u001b[39m.\u001b[39;49mprint_tree()\n\u001b[1;32m    610\u001b[0m mult \u001b[39m=\u001b[39m f\u001b[39m*\u001b[39mg\n\u001b[1;32m    611\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mmult:\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/GitHub/BFE/packages/func.py:130\u001b[0m, in \u001b[0;36mfunc.print_tree\u001b[0;34m(self, curr_node)\u001b[0m\n\u001b[1;32m    126\u001b[0m             depth_array[dep]\u001b[39m.\u001b[39mappend(elem_type)\n\u001b[1;32m    128\u001b[0m     \u001b[39mreturn\u001b[39;00m depth_array\n\u001b[0;32m--> 130\u001b[0m max_depth \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39;49m(tree_dict) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    132\u001b[0m depth_array \u001b[39m=\u001b[39m create_depth_array(max_depth)\n\u001b[1;32m    133\u001b[0m \u001b[39m# print(\"Depth array before:\\n\", depth_array)\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from packages.func import func\n",
     "import numpy as np\n",
@@ -52,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,18 +33,16 @@
     "Action Space: All possible operations on the tree that should be made by the\n",
     "agent. Make sure to implement them in the class. \n",
     "\"\"\"\n",
-    "actions = [\"add_x\", \"add_cos\", \"add_plus\"]\n",
+    "actions = [\"add_x\", \"add_cos\"]\n",
     "\n",
     "# Environment Simulation\n",
     "def step(state, action):\n",
     "    # Apply action to the state\n",
     "    # For simplicity, actions are just concatenated to the string\n",
     "    if action == \"add_cos\":\n",
-    "        new_state = state + \"cos(x)\"\n",
+    "        new_state = state + func(\"cos(x)\")\n",
     "    elif action == \"add_x\":\n",
-    "        new_state = state + \"x\"\n",
-    "    elif action == \"add_plus\":\n",
-    "        new_state = state + \"+\"\n",
+    "        new_state = state + func(\"x\")\n",
     "    return new_state"
    ]
   },
